Fix XML difference overflowing modal

--- a/src/less-style/modals.less
+++ b/src/less-style/modals.less
@@ -54,6 +54,10 @@
             bottom: @padding;
             left: @padding;
             right: @padding;
+
+            .modal-body {
+                overflow-y: auto;   // fixed position means scrolling happens within modal
+            }
         }
     }
 }
